# cookiecutter-python

./: README.md  TODO.md  cookiecutter.json
hooks/: post_gen_project.sh
{{cookiecutter.package_name}}/: .bumpversion.cfg  .editorconfig  .gitignore  .pylintrc  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  buildah.sh  docker-compose-sonarqube.yaml  requirements.dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
{{cookiecutter.package_name}}/docs/: serve-sphinx.sh
{{cookiecutter.package_name}}/docs/source/: conf.py  index.rst
{{cookiecutter.package_name}}/docs/source/user/: index.rst
{{cookiecutter.package_name}}/{{cookiecutter.package_name}}/: __init__.py  my_module.py
